Update description with new feature - able to add issues from requests now.

--- a/BappDescription.html
+++ b/BappDescription.html
@@ -16,8 +16,8 @@ three tabs available:</p>
 <p>Usage:</p>
 <ol>
 	<li>Select the target that requires a custom issue.</li>
-	<li>In the Issues section of the selected target, right click to show the 
-	context menu.</li>
+  <li>In the Contents or Issues section of the selected target, right click to
+    show the context menu.</li>
 	<li>From the context menu select &quot;Add Issue&quot;.</li>
 	<li>Enter custom data into the relevant fields. The extension will auto-fill 
 	the &quot;URL&quot; and &quot;Port&quot; data fields with the selected target's url and port.</li>
